@@ -95,6 +95,8 @@ IN DEVELOPMENT
     * Use urlutils to generate relative URLs, not osutils 
       (Aaron Bentley, #76229)
 
+    * ``bzr status`` in a readonly directory should work without giving
+      lots of errors. (John Arbash Meinel, #76299)
 
 bzr 0.13  2006-12-05
     
